--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+**model**
+Python/Unstructured/20k_4l_no_tanh/
+**.mat 
+**.txt
+**.fig
+**.emf
